labs/mac-vmware-k8s-gitops/k8s/apps/go-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-api
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
