labs/mac-vmware-k8s-gitops/k8s/apps/go-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api
  namespace: go-api
  labels:
    app.kubernetes.io/name: go-api
spec:
  selector:
    app.kubernetes.io/name: go-api
  ports:
    - name: http
      port: 80
      targetPort: http
